Resolves #0 by removing dark mode altogether.

--- a/assets/css/theme/theme--base.css
+++ b/assets/css/theme/theme--base.css
@@ -140,16 +140,7 @@ body {
     hyphens: auto;
   }
 }
-@media all and (prefers-color-scheme: dark) {
-  body {
-    background-color: var(--color--grey-dark);
-    background-image: none;
-    filter: grayscale(100%) invert(100%);
-  }
-  figure img {
-    filter: invert(100%);
-  }
-}
+
 
 /**
  * Change the transition value for folks who prefer reduced motion.
